Fixes#289 :  Footer overflowing in contributors page fixed

--- a/assets/css_files/contributor.css
+++ b/assets/css_files/contributor.css
@@ -9,6 +9,7 @@ body {
     background-attachment: fixed;
     background-size: cover;
     background-position: 50% 50%;
+    
 }
 
 .contributors h1 {
@@ -58,10 +59,5 @@ body {
 
 
 .footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    color: white;
-    text-align: center;
+    margin-top: 1em;
 }
